<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.creategroup.CreateGroupFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress_create_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_header_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_group_header_group_info"
            android:textAppearance="?attr/textAppearanceOverline"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/create_group_label_group_name"
            app:helperTextEnabled="true"
            app:helperText="@string/create_group_hint_group_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_header_group"
            app:startIconContentDescription="Name"
            app:startIconDrawable="@drawable/ic_baseline_text_fields_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/create_group_label_group_description"
            app:helperTextEnabled="true"
            app:helperText="@string/create_group_hint_group_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_name"
            app:startIconContentDescription="Description"
            app:startIconDrawable="@drawable/ic_baseline_text_fields_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/create_group_label_tags_description"
            app:helperTextEnabled="true"
            app:helperText="@string/create_group_hint_tags_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_description"
            app:startIconContentDescription="Tags"
            app:startIconDrawable="@drawable/ic_baseline_text_fields_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_header_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/create_group_header_photo"
            android:textAppearance="?attr/textAppearanceOverline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_tags" />

        <ImageView
            android:id="@+id/photo_preview"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="16dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_header_photo"
            android:contentDescription="@string/create_group_image_description"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_photo_error"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/create_group_validation_image_invalid"
            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/photo_preview"
            app:layout_constraintLeft_toLeftOf="@+id/photo_preview"
            app:layout_constraintRight_toRightOf="@id/photo_preview"
            android:textColor="?attr/colorError"
            android:visibility="gone"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_pick_camera"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/create_group_btn_camera"
            android:textAllCaps="true"
            app:layout_constraintLeft_toRightOf="@id/photo_preview"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/photo_preview" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_pick_storage"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/create_group_btn_storage"
            android:textAllCaps="true"
            app:layout_constraintTop_toBottomOf="@id/btn_pick_camera"
            app:layout_constraintLeft_toRightOf="@id/photo_preview"
            app:layout_constraintRight_toRightOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_create_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/text_photo_error"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/create_group_btn_create_group"
            android:textAllCaps="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

