<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.createpost.CreatePostFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress_create_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_header_post_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceOverline"
            android:text="@string/create_post_header_post_info"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_post_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/create_post_label_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_header_post_title"
            app:startIconContentDescription="@string/create_post_label_title"
            app:startIconDrawable="@drawable/ic_baseline_text_fields_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_header_post_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceOverline"
            android:text="@string/create_post_header_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/edit_post_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_post_content"
            style="@style/Widget.Material3.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="6dp"
            android:hint="@string/create_post_label_content"
            app:helperTextEnabled="true"
            app:helperText="Post content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_header_post_content"
            app:layout_constraintBottom_toTopOf="@id/layout_post_create_image">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minLines="4"
                android:gravity="top" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_post_create_image"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:visibility="gone"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/layout_post_location">

            <ImageView
                android:id="@+id/post_create_image_preview"
                android:layout_margin="6dp"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/post_create_image_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/post_create_image_preview"
                app:layout_constraintRight_toLeftOf="@+id/btn_post_create_remove_image"
                android:gravity="left"/>

            <ImageButton
                android:id="@+id/btn_post_create_remove_image"
                android:layout_marginRight="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_close_24"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_post_location"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:visibility="gone"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/layout_post_create">

            <ImageView
                android:id="@+id/post_location_icon"
                android:layout_margin="6dp"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_location_on_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:tint="?attr/colorPrimaryDark" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_post_location_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/post_location_icon"
                app:layout_constraintRight_toLeftOf="@id/btn_post_create_remove_location"
                android:gravity="left"/>

            <ImageButton
                android:id="@+id/btn_post_create_remove_location"
                android:layout_marginRight="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_close_24"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_post_create"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="?attr/colorPrimarySurface"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <ImageButton
                android:id="@+id/btn_post_create_add_image_camera"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="56dp"
                android:layout_height="0dp"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/ic_baseline_camera_alt_24"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:tint="?attr/colorOnPrimarySurface"
                android:contentDescription="@string/create_post_image_description_pick_camera" />

            <ImageButton
                android:id="@+id/btn_post_create_add_image_storage"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="56dp"
                android:layout_height="0dp"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/ic_baseline_folder_24"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintLeft_toRightOf="@+id/btn_post_create_add_image_camera"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:tint="?attr/colorOnPrimarySurface"
                android:contentDescription="@string/create_post_image_description_pick_storage"/>

            <ImageButton
                android:id="@+id/btn_post_add_location"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="56dp"
                android:layout_height="0dp"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/ic_baseline_add_location_24"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintLeft_toRightOf="@+id/btn_post_create_add_image_storage"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:tint="?attr/colorOnPrimarySurface"
                android:contentDescription="@string/create_post_image_description_pick_storage"/>

            <Button
                android:id="@+id/btn_create_post"
                android:paddingHorizontal="16dp"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/create_post_btn_create"
                android:textAllCaps="true"
                android:textColor="?attr/colorOnPrimarySurface"
                android:background="?attr/selectableItemBackground"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>